use dovecot version 1:2.2.25-1ubuntu2 as base

--- a/debian/control
+++ b/debian/control
@@ -23,28 +23,26 @@ Build-Depends: debhelper (>= 9),
                libexpat-dev,
                libwrap0-dev,
                dh-systemd,
-               po-debconf,
                lsb-release,
-               libclucene-dev (>= 2.3),
                liblzma-dev,
                liblz4-dev,
                libexttextcat-dev,
-               libstemmer-dev,
                autotools-dev,
                dh-exec
-Standards-Version: 3.9.6
+Standards-Version: 3.9.8
 Homepage: http://dovecot.org/
 Vcs-Git: https://anonscm.debian.org/git/collab-maint/dovecot.git
 Vcs-Browser: https://anonscm.debian.org/gitweb/?p=collab-maint/dovecot.git
 
 Package: dovecot-core
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libpam-runtime (>= 0.76-13.1), openssl, adduser, ucf (>= 2.0020), ssl-cert, lsb-base
-Recommends: ntpdate
-Suggests: ntp, dovecot-gssapi, dovecot-sieve, dovecot-pgsql, dovecot-mysql, dovecot-sqlite, dovecot-ldap, dovecot-imapd, dovecot-pop3d, dovecot-lmtpd, dovecot-managesieved, dovecot-solr, dovecot-lucene, ufw
+Depends: ${shlibs:Depends}, ${misc:Depends}, libpam-runtime (>= 0.76-13.1), openssl, adduser, ucf (>= 2.0020), lsb-base, ssl-cert
+Suggests: ntp, dovecot-gssapi, dovecot-sieve, dovecot-pgsql, dovecot-mysql, dovecot-sqlite, dovecot-ldap, dovecot-imapd, dovecot-pop3d, dovecot-lmtpd, dovecot-managesieved, dovecot-solr
 Provides: dovecot-common, dovecot-abi-${dovecot:ABI-Version}
-Replaces: dovecot-common (<< 1:2.0.14-2~), mailavenger (<< 0.8.1-4)
-Breaks: dovecot-common (<< 1:2.0.14-2~), mailavenger (<< 0.8.1-4)
+Replaces: dovecot-common (<< 1:2.0.14-2~), mailavenger (<< 0.8.1-4),
+          dovecot-lucene (<<1:2.2.24~)
+Breaks: dovecot-common (<< 1:2.0.14-2~), mailavenger (<< 0.8.1-4),
+        dovecot-lucene (<<1:2.2.24~)
 Description: secure POP3/IMAP server - core files
  Dovecot is a mail server whose major goals are security and extreme
  reliability. It tries very hard to handle all error conditions and verify
@@ -72,6 +70,7 @@ Description: secure POP3/IMAP server - header files
 Package: dovecot-imapd
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, dovecot-core (= ${binary:Version}), ucf (>= 2.0020)
+Suggests: ufw
 Provides: imap-server
 Description: secure POP3/IMAP server - IMAP daemon
  Dovecot is a mail server whose major goals are security and extreme
@@ -85,6 +84,7 @@ Description: secure POP3/IMAP server - IMAP daemon
 Package: dovecot-pop3d
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, dovecot-core (= ${binary:Version}), ucf (>= 2.0020)
+Suggests: ufw
 Provides: pop3-server
 Description: secure POP3/IMAP server - POP3 daemon
  Dovecot is a mail server whose major goals are security and extreme
@@ -208,18 +208,6 @@ Description: secure POP3/IMAP server - Solr support
  fast, extensible, and portable.
  .
  This package provides Solr full text search support for Dovecot.
-
-Package: dovecot-lucene
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, dovecot-core (= ${binary:Version})
-Description: secure POP3/IMAP server - Lucene support
- Dovecot is a mail server whose major goals are security and extreme
- reliability. It tries very hard to handle all error conditions and verify
- that all data is valid, making it nearly impossible to crash. It supports
- mbox/Maildir and its own dbox/mdbox formats, and should also be pretty
- fast, extensible, and portable.
- .
- This package provides Lucene full text search support for Dovecot.
 
 Package: dovecot-dbg
 Section: debug
