--- a/debian/rules
+++ b/debian/rules
@@ -3,6 +3,7 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
+SHELL=/bin/bash -O extglob
 PIGEONHOLE_DIR=$(CURDIR)/pigeonhole
 
 export DEB_BUILD_MAINT_OPTIONS=hardening=+all
@@ -23,7 +24,7 @@ MOVE=mv $(CORE_DIR)/$(1) $(PKG_DIR:PKG=$(2))/$(dir $(1));
 # <addon>_files will be automatically moved from dovecot's tree to the
 # respective package.
 imapd_files = usr/lib/dovecot/imap* \
-	      usr/lib/dovecot/modules/lib??_imap* \
+	      usr/lib/dovecot/modules/lib??_imap_!(sieve*) \
 	      usr/share/dovecot/conf.d/??-imap*
 
 pop3d_files = usr/lib/dovecot/pop3* \
@@ -50,11 +51,14 @@ sqlite_files = usr/lib/dovecot/modules/auth/libdriver_sqlite* \
 gssapi_files = usr/lib/dovecot/modules/auth/libmech_gssapi*
 
 ldap_files = usr/lib/dovecot/modules/auth/libauthdb_ldap* \
+	     usr/lib/dovecot/modules/dict/libdict_ldap* \
+	     usr/lib/dovecot/libdovecot-ldap* \
 	     usr/share/dovecot/*-ldap.conf.ext \
 	     usr/share/dovecot/conf.d/*-ldap.conf.ext
 
 sieve_files = usr/bin/sieve* \
 	      usr/lib/dovecot/modules/lib??_sieve* \
+	      usr/lib/dovecot/modules/lib??_imap_sieve* \
 	      usr/lib/dovecot/modules/doveadm/lib??_doveadm_sieve* \
 	      usr/lib/dovecot/modules/sieve \
 	      usr/lib/dovecot/libdovecot-sieve* \
@@ -62,8 +66,11 @@ sieve_files = usr/bin/sieve* \
 
 solr_files = usr/lib/dovecot/modules/lib??_fts_solr_*
 
+lucene_files = usr/lib/dovecot/modules/lib??_fts_lucene_*
+
 dev_files = usr/include/* \
-	    usr/lib/dovecot/dovecot-config
+	    usr/lib/dovecot/dovecot-config \
+	    usr/share/aclocal/*.m4
 
 %:
 	dh $@ --with=systemd,autotools-dev
@@ -80,7 +87,7 @@ override_dh_auto_configure:
 	            --with-solr \
 	            --with-ioloop=best \
 	            --with-libwrap \
-	            --without-lucene \
+	            --with-lucene \
 		    --with-lz4 \
 	            --prefix=/usr \
 	            --sysconfdir=/etc \
@@ -142,6 +149,7 @@ override_dh_install:
 			$(call MOVE,$(file),$(package))))
 	
 	rmdir $(CORE_DIR)/usr/include
+	rmdir $(CORE_DIR)/usr/share/aclocal
 	grep ABI_VERSION config.h \
 		| perl -ne '/"(.+)\(.+\)"/ && print $$1' \
 		| tr '[A-Z]' '[a-z]' > $(PKG_DIR:PKG=dev)/usr/share/dovecot/dovecot-abi
